samples/_failures_safe/1761309426_9b5d5f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3e02bfbb.c: In function ‘main’:
./samples/SAFE/__tmp_3e02bfbb.c:155:53: error: expected ‘)’ at end of input
  155 |         choice = read_int("Select operation: ", 1, 5
      |                          ~                          ^
      |                                                     )
./samples/SAFE/__tmp_3e02bfbb.c:155:9: error: expected declaration or statement at end of input
  155 |         choice = read_int("Select operation: ", 1, 5
      |         ^~~~~~
./samples/SAFE/__tmp_3e02bfbb.c:155:9: error: expected declaration or statement at end of input
